--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <body onload="onLoadEvent()">
         <fieldset style="width:400px;"><legend>gesture</legend>
             <i>lower is stronger</i>
+            <div id="countdown"></div>
             <div id="chartdiv" style="height:400px;width:300px; "></div>
         </fieldset>
         <fieldset style="width:100px;"><legend>pushing</legend>
