--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,13 @@
         <style type="text/css">
             .circle {
                 background-color: black;
-                -webkit-border-radius: 25px;
-                -moz-border-radius: 25px;
-                border-radius: 25px;
+                border-radius: 9999px;
                 position: fixed;
             }
             .pointer {
                 background-color: black;
-                -webkit-border-radius: 25px;
-                -moz-border-radius: 25px;
-                border-radius: 25px;
+                border-radius: 9999px;
+                box-shadow: 25px 25px 88px 25px rgba(25, 25, 25, .3);
                 position: fixed;
             }
         </style>
